<resources>
    <string name="access_token_key">access_token</string>
    <string name="vk_api_ver">5.60</string>
    <string name="user_id_key">user_id</string>
    <string name="address_group_format">https://vk.com/public%d</string>
    <string name="address_user_format">https://vk.com/id%d</string>
    <string name="attachment_format" formatted="false">%s,market%s_%s</string>
    <string name="show_orders_online_format">https://vk.com/im?sel=%s</string>
    <string name="play_market_address_format">https://play.google.com/store/apps/details?id=%s</string>

    <string name="item_added_to_cart">Добавлено в корзину</string>
    <string name="action_open_cart">посмотреть</string>
    <string name="cart_title">корзина</string>
    <string name="action_buy">купить</string>
    <string name="alert_buy_title">оформление заказа</string>
    <string name="alert_buy_positive_button">оформить заказ</string>
    <string name="alert_buy_comment_hint">Укажите комментарий к заказу</string>
    <string name="item_cart_error_value">нет данных</string>
    <string name="email_app_error_no_found">Не найдено приложение для отправки писем</string>
    <string name="request_buy_email_title">Заказ</string>
    <string name="requset_buy_error_no_products">нет добавленных позиций</string>
    <string name="action_view_market">перейти на сайт</string>
    <string name="action_view_browser_error">Не найден браузер</string>
    <string name="action_favorite">избранное</string>
    <string name="action_favorites">избранные товары</string>
    <string name="button_save">Cохранить</string>
    <string name="cart_no_items">В корзине ничего нет</string>
    <string name="no_fav_items_found">Нет избранных позиций</string>
    <string name="activity_cart_title">Корзина</string>
    <string name="activity_fav_title">Избранное</string>
    <string name="plural_one_item">позицию</string>
    <string name="plural_several_item">позиции</string>
    <string name="plural_many_item">позиций</string>
    <string name="cart_cost_format" formatted="false">за %d %s %d рублей</string>
    <string name="fav_date_format">\'добавлено\' dd MMMM yyyy \'в\' HH:mm</string>
    <string name="cart_general_cost_format">%d рублей</string>
    <string name="cart_clear">Очистить корзину</string>
    <string name="cart_clear_dialog_text">Убрать все позиции из корзины?</string>
    <string name="cart_clear_dialog_positive">Очистить</string>
    <string name="cart_clear_dialog_cancel">Отмена</string>
    <string name="tab_featured">новинки</string>
    <string name="tab_goods">все товары</string>
    <string name="menu_item_text_error">ошибка альбома</string>
    <string name="text_share">Поделиться</string>
    <string name="action_share_title">Поделиться</string>
    <string name="action_share_error">Временно недоступно.</string>
    <string name="action_search_label">Поиск</string>
    <string name="text_offline">оффлайн режим</string>
    <string name="error_title">Что-то пошло не так</string>
    <string name="error_button_text">Попробовать еще раз</string>
    <string name="market_item_like_type">market</string>
    <string name="action_like_success">Лайк поставлен</string>
    <string name="action_like_error">Не удалось поставить лайк</string>
    <string name="action_feedback">написать отзыв</string>
    <string name="feedback_message_title">Отзыв о приложении</string>
    <string name="feedback_message_body">Привет! Хочу рассказать, что мне понравилось/не понравилось в приложении</string>
    <string name="activity_login_lead">К сожалению, vk.com требует авторизацию для отображения маркета. Однако, вы всегда можете перейти на страницу магазина через браузер</string>
    <string name="activity_login_text_navigate">Перейти в магазин через браузер</string>
    <string name="comment_no_title">Неизвестный</string>
    <string name="comment_no_text">Сообщение не получено</string>
    <string name="action_comment">оставить отзыв</string>
    <string name="view_dialog_comment_hint">Введите комментарий</string>
    <string name="view_dialog_comment_title">Поделитесь отзывом</string>
    <string name="view_dialog_comment_action_send">Отправить</string>
    <string name="view_dialog_comment_empty_message_error">Пустое сообщение не было отправлено</string>
    <string name="activity_item_info_comment_added">Комментарий добавлен</string>
    <string name="activity_item_info_comment_add_error">Ошибка отправки комментария</string>
    <string name="action_history">История заказов</string>
    <string name="activity_orders_history_title">История заказов</string>
    <string name="activity_cart_order_sent">Заказ отправлен</string>
    <string name="request_order_item_format" formatted="false">%s\n%s, %d шт</string>
    <string name="order_history_item_format" formatted="false">%s, %d шт</string>
    <string name="order_history_date_format">Заказ от%s</string>
    <string name="order_history_sum_format">На сумму %s рублей</string>
    <string name="action_view_orders_online">Посмотреть заказы онлайн</string>
    <string name="action_clear_history">Удалить историю заказов</string>
    <string name="orders_history_clear_data_title">Очистить историю заказов?</string>
    <string name="orders_history_clear_items_message">Удалить все заказы</string>
    <string name="orders_history_clear_data_cancel">Отмена</string>
    <string name="activity_orders_history_no_data">Нет сохраненной истории заказов</string>
    <string name="activity_item_info_fav_add">Добавлено в избранное</string>
    <string name="activity_itme_info_fav_remove">Удалено из избранного</string>
    <string name="activity_item_info_fav_add_action">Посмотреть</string>
    <string name="suggestion_list_title">Также будет интересно</string>
    <string name="suggestions_list_item_error_text">нет данных</string>

    <string name="payment_method_phone">мобильный телефон</string>
    <string name="payment_method_bankcard">банковская карта</string>
    <string name="payment_method_vk_transfer">перевод вконтакте</string>
    <string name="payment_method_paypal">paypal</string>
    <string name="payment_method_bank_payment">перевод по реквизитам банковского счета</string>
    <string name="payment_method_private_message">другой способ оплаты</string>
    <string name="activity_payment_title">Оплата</string>
    <string name="menu_fav">Избранное</string>
    <string name="menu_promo">Бонусы</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_website">Сайт магазина</string>
    <string name="menu_chat">Чат с магазином</string>
    <string name="menu_phone">Позвонить в магазин</string>
    <string name="menu_feedback">Оставить отзыв</string>
    <string name="menu_rate">Оценить приложение</string>
    <string name="calling_error">Звонок не удался</string>
    <string name="activity_title_bonus">Бонусы</string>
    <string name="activity_title_chat">Чат</string>
    <string name="activity_title_settings">Настройки</string>
    <string name="menu_history">История заказов</string>
    <string name="payment_bonus">Оплата бонусами</string>
    <string name="payment_price_hint">Всего к оплате</string>
    <string name="cart_bonus_format">Доступно бонусов: %d</string>
    <string name="button_cart_payment">Оплатить заказ</string>
    <string name="activity_bonus_message">Совершайте покупки или введите промо-код, чтобы получить бонусы</string>
    <string name="activity_bonus_button">Активировать промо-код</string>
    <string name="activity_bonus_sum_hint">бонусов на вашем счету</string>
    <string name="settings_push">Получать выбранные Push-сообщения</string>
    <string name="activity_chat_button_send">Отправить</string>
    <string name="activity_bonus_input_promo_hint">Введите промо-код</string>
    <string name="card_hint_number">Номер карты</string>
    <string name="card_hint_date">Срок действия</string>
    <string name="card_hint_month">MM</string>
    <string name="card_hint_year">YYYY</string>
    <string name="card_hint_cvv">CVV</string>
    <string name="activity_bank_payment_bank_card_hint">Номер банковской карты</string>
    <string name="activity_bank_payment_recipient_hint">Получатель</string>
    <string name="activity_bank_payment_bank_name_hint">Банк</string>
    <string name="activity_bank_payment_bank_correspond_state_hint">Кор. счет</string>
    <string name="activity_bank_payment_bank_bik">БИК банка</string>
    <string name="activity_bank_payment_recipient_state_hint">Расчетный счет</string>
    <string name="activity_bank_payment_message_hint">текст сообщения</string>
    <string name="error_bank_card_date">Проверьте введ енный срок действия банковской карты</string>
    <string name="error_bank_card">Проверьте введенные данные банковской карты</string>
    <string name="error_bank_card_payment_provider">Платежный провайдер недоступен</string>
    <string name="payment_successful">Оплата прошла успешно</string>
    <string name="menu_shop">Витрина</string>
    <string name="notification_type_promo">промо</string>
    <string name="notification_type_sales">скидки</string>
    <string name="notification_type_market">выставки и ярмарки</string>
    <string name="notification_type_contest">конкурсы</string>
    <string name="notification_type_service">оповещения</string>
</resources>