<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etBankCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_hint_number"
            android:inputType="number"
            android:lines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_hint_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/card_hint_month"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/card_hint_year"
            android:inputType="number"
            android:lines="1"
            android:maxLength="4" />

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etCVV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/card_hint_cvv"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_accent_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/button_cart_payment"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/white" />

</LinearLayout>