<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.byters.vkmarketplace.ui.activities.ActivityCart">

    <include layout="@layout/appbar" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNoItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cart_no_items"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/srlItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/activity_cart_list_top_padding"
                    tools:listitem="@layout/view_item_cart" />

            </android.support.v4.widget.SwipeRefreshLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payment_price_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/tvBonusCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <CheckBox
                android:id="@+id/cbBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/payment_bonus" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bottom_accent_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/button_cart_payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
